--- a/TheDailyDev/Info.plist
+++ b/TheDailyDev/Info.plist
@@ -14,6 +14,16 @@
 				<string>thedailydev</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.supabase.thedailydev</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.supabase.thedailydev</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
