Remove deprecated edge functions and unused files
- Remove validate-coupon, complete-trial-setup, initiate-trial edge functions (using pre-created checkout links)
- Remove send-push-notification edge function (push notifications paused)
- Remove create_coupon_usage_table.sql (coupon functionality removed)
- Remove create_device_tokens_table.sql (push notifications paused)
- Remove AppDelegate.swift and NotificationService.swift (push notifications paused)
- Remove EDGE_FUNCTIONS_CLEANUP.md and PUSH_NOTIFICATIONS_SETUP.md (outdated docs)
- Remove test SQL files (add_test_question_*.sql)
- Add subscription-success.html redirect page
- Update webhook to use client_reference_id for reliable user linking
- Add get_user_id_by_email_function.sql for webhook email matching
- Update subscription flow to dismiss views and refresh on success

--- a/TheDailyDev/Info.plist
+++ b/TheDailyDev/Info.plist
@@ -25,5 +25,7 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSPrivacyPolicyURL</key>
+	<string>https://yourdomain.com/privacy-policy</string>
 </dict>
 </plist>
