--- a/TheDailyDev/TheDailyDev.entitlements
+++ b/TheDailyDev/TheDailyDev.entitlements
@@ -6,6 +6,8 @@
 	<array/>
 	<key>com.apple.developer.associated-domains</key>
 	<array/>
+	<key>aps-environment</key>
+	<string>development</string>
 </dict>
 </plist>
 
