Update privacy/terms URLs and UI improvements
- Update Config.swift with production privacy policy and terms of service URLs
  - Privacy Policy: https://thedailydevweb.vercel.app/privacy-policy
  - Terms of Service: https://thedailydevweb.vercel.app/terms-of-service

- Update Info.plist with production privacy policy URL for App Store compliance

- Update Privacy Policy and Privacy Manifest templates
  - Replace Stripe references with RevenueCat and Apple App Store
  - Update third-party services section to reflect current payment processing

- Change sign-up link color from blue to green theme
  - Update ContentView sign-up toggle button to use Theme.Colors.accentGreen

- Add PRIVACY_TERMS_UPDATE_SUMMARY.md with update checklist and next steps

--- a/TheDailyDev/Info.plist
+++ b/TheDailyDev/Info.plist
@@ -26,6 +26,6 @@
 		</dict>
 	</array>
 	<key>NSPrivacyPolicyURL</key>
-	<string>https://yourdomain.com/privacy-policy</string>
+	<string>https://thedailydevweb.vercel.app/privacy-policy</string>
 </dict>
 </plist>
